fixed the side pages CSS
Fix the Nav bar and added in the secondary css files to the other HTML pages

--- a/content/Menu.phtml
+++ b/content/Menu.phtml
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Yamazaki</title>
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="template/master.css">
+    <link rel="stylesheet" href="template/menu.css">
   </head>
   <body>
     <div class="HeadNav">
@@ -16,16 +16,15 @@
           Sushi & Hibachi
         </h2>
       </header>
-      <nav>
+<!--      <nav>
         <ul>
           <li><a href="Home.html">Home</a></li>
           <li><a href="Menu.html">Menu</a></li>
           <li><a href="Catering.html">Catering</a></li>
           <li><a href="Specials.html">Specials</a></li>
           <li><a href="Feedback.html">Feedback</a></li>
-          <!--<li><a href="test.html">TEST!! REMOVE ME!!</a></li>-->
         </ul>
-      </nav>
+      </nav>-->
         <h1 class="foodMenu">~Menu~</h1>
         <nav id=NavMenu>
           <ul>
