--- a/content/home.phtml
+++ b/content/home.phtml
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Yamazaki</title>
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/HomeImg.css">
+    <link rel="stylesheet" href="template/master.css">
+    <link rel="stylesheet" href="template/HomeImg.css">
   </head>
   <body>
     <div id="innerPane">
@@ -16,16 +16,16 @@
         Sushi & Hibachi
       </h2>
     </header>
-    <nav>
+<!--    <nav>
       <ul>
         <li><a href="Home.html">Home</a></li>
         <li><a href="Menu.html">Menu</a></li>
         <li><a href="Catering.html">Catering</a></li>
         <li><a href="Specials.html">Specials</a></li>
-        <li><a href="Feedback.html">Feedback</a></li>
-      <!--  <li><a href="Carears.html">Carears</a></li> -->
+        <li><a href="Feedback.html">Feedback</a></li> -->
+      <!--  <li><a href="Carears.html">Carears</a></li> --><!--
       </ul>
-    </nav>
+    </nav> -->
       <h1 id="tel">
         Tel: 706-940-0688
       </h1>
