--- a/content/results.phtml
+++ b/content/results.phtml
@@ -1,3 +1,10 @@
+<head>
+    <meta charset="utf-8">
+    <title>Yamazaki</title>
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
 <nav class="navbar navbar-dark bg-dark">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Results Page</a>
