--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-header {
-   background:#ff0;
-   padding:10px;
-}
 body {
-   padding:10px;
    padding-bottom:60px;   /* Height of the footer */
 }
 footer {
@@ -11,5 +6,5 @@ footer {
    bottom:0;
    width:100%;
    height:60px;   /* Height of the footer */
-   background:#6cf;
+   background:#grey;
 }
