--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
    padding-bottom:60px;   /* Height of the footer */
+   background:#7c7c7d;
 }
 footer {
    position:absolute;
    bottom:0;
    width:100%;
    height:60px;   /* Height of the footer */
-   background:#grey;
+   background-color: gray;
 }
