--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
    padding-bottom:60px;   /* Height of the footer */
-   background:#7c7c7d;
+   background-color: #7c7c7d;
 }
 footer {
    position:absolute;
