--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
    background-color: #7c7c7d;
 }
 footer {
-   align:center;
+   text-align: center;
    position:absolute;
    bottom:0;
    width:100%;
