--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 footer {
    text-align: center;
    /* position:absolute; */
-   bottom:100%;
+   bottom:0;
    width:100%;
    height:60px;   /* Height of the footer */
    background-color: gray;
