--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-   padding-bottom:60px;   /* Height of the footer */
+   /* padding-bottom:60px;   /* Height of the footer */ */
    background-color: #7c7c7d;
 }
 footer {
