. change from random2 to random

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding-bottom:200px;   /* Height of the footer */ */
+    padding-top:100px;   /* Height of the footer */ */
    background-color: #7c7c7d;
 }
 footer {
