--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-body {
-    padding-top:100px;   /* Height of the footer */ */
-   background-color: #7c7c7d;
-}
+
 footer {
+  padding-top:100px;
    text-align: center;
    /* position:absolute; */
    bottom:0;
