. change from random2 to random

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-footer {
+/* footer {
   padding-top: 100px;
   text-align: center;
   /* position:absolute; */
   bottom: 0;
   width: 100%;
   height: 60px;
-  /* Height of the footer */
+  /* Height of the footer
   background-color: gray;
-}
+} */
 
 
 * {
