. change from random2 to random

--- a/style.css
+++ b/style.css
@@ -1,44 +1,17 @@
-/* footer {
-  padding-top: 100px;
-  text-align: center;
-  /* position:absolute; */
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  /* Height of the footer
-  background-color: gray;
-} */
-
-
-* {
-    margin: 0;
-}
-html, body {
-    height: 100%;
+body {
+ padding-bottom:60px;   /* Height of the footer */
+ background-color: #7c7c7d;
 }
 footer {
-    height: 42px; /* .push must be the same height as .footer */
+ text-align: center;
+ position:absolute;
+ bottom:0;
+ width:100%;
+ height:60px;   /* Height of the footer */
+ background-color: gray;
 }
-.wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto -142px; /* the bottom margin is the negative value of the footer's height */
-}
-.push {
-    height: 42px; /* .push must be the same height as .footer */
-}
-
-
-/*
-
-Sticky Footer by Ryan Fait
-http://ryanfait.com/
-
-*/
-
 
 .center {
-  text-align: center;
-  align-content: center;
+text-align: center;
+align-content: center;
 }
