--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body {
  background-color: #7c7c7d;
 }
 footer {
+ padding-top: 30px;
  text-align: center;
- /* position:absolute; */
+ position:relative;
  bottom:0;
  width:100%;
  height:60px;   /* Height of the footer */
