--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 footer {
  text-align: center;
- position:relative;
+ /* position:relative; */
  bottom:0;
  width:100%;
  height:60px;   /* Height of the footer */
