--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@ footer {
  bottom:0;
  width:100%;
  height:60px;   /* Height of the footer */
- background-color: gray;
+ background-color: red;
 }
 
 .center {
