--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,10 +7,13 @@ footer {
  bottom:0;
  width:100%;
  height:60px;   /* Height of the footer */
- background-color: gray;
+ background-color: red;
 }
 
 .center {
 text-align: center;
 align-content: center;
 }
+
+
+img {max-width:100%}
