--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,10 +19,23 @@ align-content: center;
 
 img {max-width:100%} */
 
-.jumbotron {
-    background: none
+.bg {
+  background: url('/../Images/mcu.jpg') no-repeat center center;
+  position: fixed;
+  width: 100%;
+  height: 1000px; /*same height as jumbotron */
+  top:0;
+  left:0;
+  z-index: -1;
 }
 
+.jumbotron {
+  margin-bottom: 0px;
+  height: 1000px; /*Height subject to change, just using it as a test. In theory should be same height as background class*/
+  color: white;
+  text-shadow: black 0.3em 0.3em 0.3em;
+  background:transparent;
+}
 body {
  /* padding-bottom:60px;   /* Height of the footer */
     background-color: #0E0816;
