--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,4 +182,72 @@ Large Test
  */
 .carousel,.carousel .carousel-inner,.carousel .carousel-inner .active,.carousel .carousel-inner .carousel-item,.view,body,html{height:100%;}
 
+.mb-4,
+.my-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.mr-5,
+.mx-5 {
+  margin-right: 3rem !important;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.d-md-block {
+  display: block !important;
+}
+
+.d-none {
+  display: none !important;
+}
+
+.btn-lg, .btn-group-lg > .btn {
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 0.3rem;
+}
+
+.btn-outline-white {
+  color: #fff !important;
+  background-color: transparent !important;
+  border: 2px solid #fff !important; }
+
+.view, .mask {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-attachment: fixed; }
+
+.rgba-black-light,
+.rgba-black-light:after {
+    background-color: rgba(0, 0, 0, 0.3); }
+
+.d-flex {
+    display: -ms-flexbox !important;
+    display: flex !important;
+    }
+
+.justify-content-center {
+    -ms-flex-pack: center !important;
+    justify-content: center !important;
+    }
+
+.align-items-center {
+     -ms-flex-align: center !important;
+     align-items: center !important;
+    }
+
+.white-text {
+    color: #fff !important; }
+
+
 /* END CAROUSEL SPECIFIC */
