--- a/CSS/style.css
+++ b/CSS/style.css
@@ -289,6 +289,8 @@ width:100%;
 }
 #form-buscar >.form-group >.input-group > .input-group-btn > .btn .glyphicon{
  margin-right:12px;
+ background-color: #4717f6;
+
 }
 
 
@@ -299,6 +301,7 @@ width:100%;
 }
 
 #form-buscar >.form-group >.input-group > .form-control:focus {
+
   border-color: ##190061;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 1px rgba(0, 109, 0, 0.8);
