--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,7 @@ body {
  /* padding-bottom:60px;   /* Height of the footer */
     background-color: #0E0816;
     color: #E7DFDD;
+    text-align: center;
 }
 
 /* NAVBAR SPECIFIC
