--- a/Webpages/404.phtml
+++ b/Webpages/404.phtml
@@ -1,2 +1,2 @@
-<p>404 - page not found.</p>
-<p> <img src="Images/Cat_not_found.JPG" alt=""> </p>
+<p>Team Alpha Doesn't have that Page =-(</p>
+<img src="https://www.elegantthemes.com/blog/wp-content/uploads/2017/07/404-error.png" alt="stahp">
