--- a/CSS/style.css
+++ b/CSS/style.css
@@ -279,6 +279,12 @@ width:100%;
 
 	}
 
+.movie-details {
+  width: 320px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+}
 /*
 END SEARCH BAR SPECIFIC
 */
