--- a/CSS/style.css
+++ b/CSS/style.css
@@ -285,3 +285,9 @@ width:100%;
   margin: 0;
   text-align: center;
 }
+
+.movie-wrapper {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-template-rows: repeat(3, 100px);
+}
