--- a/CSS/style.css
+++ b/CSS/style.css
@@ -290,4 +290,5 @@ width:100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 400px);
+   border: 5px solid gray;
 }
