--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,6 +32,7 @@ Was testing on my own and it worked.
 Will Check more after */
 .navbar-toggler{
   background-color: red;
+  background-image: "Cat_not_found.JPG";
 }
 
 .navbar {
