--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,7 @@ NAVBAR SPECIFIC
 }
 
 .navbar {
-  background-color: 190061; /*190061*/
+  background-color: #190061; /*190061*/
 }
 .navbar .navbar-brand {
   color: #e7efdd;
